force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/CaliberMind_Campaign_Attribution__c.object-meta.xml
<CustomObject>
    <description>Attributes the contribution of a single opportunity to a single Campaign Member or Campaign</description>
    <label>CaliberMind Campaign Attribution</label>
    <nameField>
        <displayFormat>CI-{0}</displayFormat>
        <label>Campaign Attribution Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaliberMind Campaign Attributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>