force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to the Opportunity.</description>
    <inlineHelpText>Account related to the Opportunity.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CaliberMind Campaign Attributions</relationshipLabel>
    <relationshipName>CaliberMind_Campaign_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>