force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign related to the attributed response.</description>
    <inlineHelpText>The campaign related to the attributed response.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CaliberMind Campaign Attributions</relationshipLabel>
    <relationshipName>CaliberMind_Campaign_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>