force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact, if the campaign member is related to a contact.</description>
    <inlineHelpText>The contact, if the campaign member is related to a contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CaliberMind Campaign Attributions</relationshipLabel>
    <relationshipName>CaliberMind_Campaign_Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>