force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/FCI_Days_Before_Opportunity_Close__c.field-meta.xml
<CustomField>
    <fullName>FCI_Days_Before_Opportunity_Close__c</fullName>
    <description>Evaluates to number of days before opportunity close date based on response date whether or not the opportunity is closed. Same day is 0, after opportunity close is blank.</description>
    <formula>IF( Opportunity__r.CloseDate - DATEVALUE(Response_Date__c) &gt;= 0, Opportunity__r.CloseDate - DATEVALUE(Response_Date__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates to number of days before opportunity close date based on response date whether or not the opportunity is closed. Same day is 0, after opportunity close is blank.</inlineHelpText>
    <label>Days Before Opportunity Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>