force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/FirstRespondedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstRespondedDate__c</fullName>
    <description>Value of the First Responded Date field for the related Campaign Member.</description>
    <inlineHelpText>Value of the First Responded Date field for the related Campaign Member.</inlineHelpText>
    <label>First Responded Date</label>
    <type>Date</type>
</CustomField>