force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Has_Attribution_Model_4__c.field-meta.xml
<CustomField>
    <fullName>Has_Attribution_Model_4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campaign Attribution Model Inclusion</description>
    <label>Has Attribution Model 4</label>
    <type>Checkbox</type>
</CustomField>