force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/HasInfluenceModel1__c.field-meta.xml
<CustomField>
    <fullName>HasInfluenceModel1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, has attribution for Model 1 even if the total attribution is $0.</description>
    <inlineHelpText>If checked, has attribution for Model 1 even if the total attribution is $0.</inlineHelpText>
    <label>Has Attribution Model 1</label>
    <type>Checkbox</type>
</CustomField>