force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Lost_Op_Attribution_Model4__c.field-meta.xml
<CustomField>
    <fullName>Lost_Op_Attribution_Model4__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lost Opportunities with Attribution Model4</description>
    <label>Lost Op Attribution Model4</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>