force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/LostOpInfluenceModel1__c.field-meta.xml
<CustomField>
    <fullName>LostOpInfluenceModel1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed/Lost Opportunity Attribution Amount for Model 1.</description>
    <inlineHelpText>Closed/Lost Opportunity Attribution Amount for Model 1.</inlineHelpText>
    <label>Lost Op Attribution Model1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>