force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/LostOpInfluenceModel3__c.field-meta.xml
<CustomField>
    <fullName>LostOpInfluenceModel3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed/Lost Opportunity Attribution Amount for Model 3.</description>
    <inlineHelpText>Closed/Lost Opportunity Attribution Amount for Model 3.</inlineHelpText>
    <label>Lost Op Attribution Model3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>