force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>This is the date/time value that Campaign Attribution is considering the response date in attribution evaluations. This is the field you use for reporting.</description>
    <inlineHelpText>This is the date/time value that Campaign Attribution is considering the response date in attribution evaluations. This is the field you use for reporting.</inlineHelpText>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>