force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Response_ID__c</fullName>
    <description>ID of the related Campaign Member</description>
    <inlineHelpText>ID of the related Campaign Member</inlineHelpText>
    <label>Response ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>