force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/ResponseCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseCreationDate__c</fullName>
    <description>Value of the Campaign Member Creation Date.</description>
    <inlineHelpText>Value of the Campaign Member Creation Date.</inlineHelpText>
    <label>Response Creation Date</label>
    <type>DateTime</type>
</CustomField>