force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/Total_Op_Attribution_Model4__c.field-meta.xml
<CustomField>
    <fullName>Total_Op_Attribution_Model4__c</fullName>
    <description>All Opportunities with Attribution Model4</description>
    <formula>Won_Op_Attribution_Model4__c + Open_Op_Attribution_Model4__c +  Lost_Op_Attribution_Model4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Op Attribution Model4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>