force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/TotalOpInfluenceModel3__c.field-meta.xml
<CustomField>
    <fullName>TotalOpInfluenceModel3__c</fullName>
    <description>Total value of Opportunity (open, won, lost) Attribution for Model 3.</description>
    <formula>WonOpInfluenceModel3__c + OpenOpInfluenceModel3__c + LostOpInfluenceModel3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total value of Opportunity (open, won, lost) Attribution for Model 3.</inlineHelpText>
    <label>Total Op Attribution Model3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>