force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/WonOpInfluenceModel1__c.field-meta.xml
<CustomField>
    <fullName>WonOpInfluenceModel1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed/Won Opportunity Attribution Amount for Model 1.</description>
    <inlineHelpText>Closed/Won Opportunity Attribution Amount for Model 1.</inlineHelpText>
    <label>Won Op Attribution Model1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>