force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/WonOpInfluenceModel2__c.field-meta.xml
<CustomField>
    <fullName>WonOpInfluenceModel2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed/Won Opportunity Attribution Amount for Model 2.</description>
    <inlineHelpText>Closed/Won Opportunity Attribution Amount for Model 2.</inlineHelpText>
    <label>Won Op Attribution Model2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>