force-app/main/default/objects/CaliberMind_Campaign_Attribution__c/fields/WonOpInfluenceModel3__c.field-meta.xml
<CustomField>
    <fullName>WonOpInfluenceModel3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed/Won Opportunity Attribution Amount for Model 3.</description>
    <inlineHelpText>Closed/Won Opportunity Attribution Amount for Model 3.</inlineHelpText>
    <label>Won Op Attribution Model3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>